2008-02-25  MorganL  <morganl.webkit@yahoo.com>

        Reviewed by Darin Adler.

        Eliminate some #ifdefs from headers in platform/network.
        http://bugs.webkit.org/show_bug.cgi?id=17210

        * WebCore.base.exp:
        * WebCore.order:
        * WebCore.vcproj/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        * dom/XMLTokenizer.cpp:
        * loader/ResourceLoader.h:
        * platform/network/AuthenticationChallenge.cpp: Removed.
        * platform/network/AuthenticationChallenge.h: Removed.
        * platform/network/AuthenticationChallengeBase.cpp: Copied from platform/network/AuthenticationChallenge.cpp.
        (WebCore::AuthenticationChallengeBase::AuthenticationChallengeBase):
        (WebCore::AuthenticationChallengeBase::previousFailureCount):
        (WebCore::AuthenticationChallengeBase::proposedCredential):
        (WebCore::AuthenticationChallengeBase::protectionSpace):
        (WebCore::AuthenticationChallengeBase::failureResponse):
        (WebCore::AuthenticationChallengeBase::error):
        (WebCore::AuthenticationChallengeBase::isNull):
        (WebCore::AuthenticationChallengeBase::nullify):
        (WebCore::AuthenticationChallengeBase::compare):
        * platform/network/AuthenticationChallengeBase.h: Copied from platform/network/AuthenticationChallenge.h.
        (WebCore::AuthenticationChallengeBase::platformCompare):
        (WebCore::operator==):
        (WebCore::operator!=):
        * platform/network/ResourceError.cpp: Removed.
        * platform/network/ResourceError.h: Removed.
        * platform/network/ResourceErrorBase.cpp: Copied from platform/network/ResourceError.cpp.
        (WebCore::ResourceErrorBase::lazyInit):
        (WebCore::ResourceErrorBase::compare):
        * platform/network/ResourceErrorBase.h: Copied from platform/network/ResourceError.h.
        (WebCore::ResourceErrorBase::isNull):
        (WebCore::ResourceErrorBase::domain):