@@ -823,11 +823,12 @@ webcore_sources += \
 	WebCore/platform/KURL.cpp \
 	WebCore/platform/Logging.cpp \
 	WebCore/platform/MIMETypeRegistry.cpp \
-	WebCore/platform/network/AuthenticationChallenge.cpp \
+	WebCore/platform/network/AuthenticationChallengeBase.cpp \
 	WebCore/platform/network/Credential.cpp \
 	WebCore/platform/network/FormData.cpp \
 	WebCore/platform/network/HTTPParsers.cpp \
 	WebCore/platform/network/ProtectionSpace.cpp \
+	WebCore/platform/network/ResourceErrorBase.cpp \
 	WebCore/platform/network/ResourceHandle.cpp \
 	WebCore/platform/network/ResourceRequestBase.cpp \
 	WebCore/platform/network/ResourceResponseBase.cpp \
