@@ -618,11 +618,12 @@ This file contains the list of files needed to build WebCore.
         platform/graphics/Path.cpp
         platform/graphics/PathTraversalState.cpp
         platform/graphics/Pen.cpp
-        platform/network/AuthenticationChallenge.cpp
+        platform/network/AuthenticationChallengeBase.cpp
         platform/network/Credential.cpp
         platform/network/HTTPParsers.cpp
         platform/network/FormData.cpp
         platform/network/ProtectionSpace.cpp
+        platform/network/ResourceErrorBase.cpp
         platform/network/ResourceHandle.cpp
         platform/network/ResourceRequestBase.cpp
         platform/network/ResourceResponseBase.cpp
